#40: I've got it running on Java 11!